--- a/modules/webconfig/nodejs/views/includes/controls.jade
+++ b/modules/webconfig/nodejs/views/includes/controls.jade
@@ -51,15 +51,26 @@ mixin details-row
                 button.form-control(bs-select ng-model=detailMdl data-multiple='1' data-placeholder='{{detail.placeholder}}' bs-options='item.value as item.label for item in {{detail.items}}')
             +tipField('detail.tip')
         div(ng-switch-when='table-simple')
-            .details-label
-                button.btn.btn-primary(ng-click='createSimpleItem(detail, #{detailMdl})') Add {{detail.label}}
             .col-sm-10.links.details-row(style='margin-bottom: 0px;')
                 table(st-table=detailMdl)
                     tbody
-                        tr(ng-repeat='row in #{detailMdl}')
-                            td
-                                a(ng-click='editSimpleItem(detail, #{detailMdl}, $index)') {{$index + 1}}. {{row}}
-                                label.fa.fa-remove(ng-click='removeSimpleItem(#{detailMdl}, $index)')
+                        tr(ng-repeat='item in #{detailMdl}')
+                            td.col-sm-12
+                                div(ng-show='detail.editIdx != {{$index}}')
+                                    a(ng-click='detail.editIdx = $index; curValue = #{detailMdl}[$index]') {{$index + 1}}. {{item}}
+                                    i.tipField.fa.fa-remove(ng-click='detail.editIdx = -1; #{detailMdl}.splice($index, 1)')
+                                div(ng-show='detail.editIdx == {{$index}}')
+                                    label.labelField {{$index + 1}}.
+                                    i.tipField.fa.fa-floppy-o(ng-click='detail.editIdx = -1; #{detailMdl}[$index]=curValue')
+                                    .input-tip
+                                        input.form-control(type='text' ng-model='curValue' placeholder='{{detail.placeholder}}')
+                            td.col-sm-1
+                                i.fa.fa-arrow-up(ng-show='$index > 0' ng-click='detail.editIdx = -1')
+                                i.fa.fa-arrow-down(ng-show='$index < #{detailMdl}.length - 1' ng-click='detail.editIdx = -1')
+            .details-label
+                .col-sm-8
+                    input.form-control(type='text' ng-model='newValue' placeholder='{{detail.placeholder}}')
+                button.btn.btn-primary(style='margin-left: 10px;' ng-disabled='!newValue || #{detailMdl}.indexOf(newValue) >= 0' ng-click='detail.editIdx = -1; addDetailSimpleItem(backupItem, field, detail.model, newValue)') Add {{detail.label}}
 
 mixin form-row
     - var lblClasses = ['col-sm-2']
@@ -141,5 +152,5 @@ mixin form-row
                                 i.fa.fa-arrow-down(ng-show='$index < #{tblMdl}.length - 1' ng-click='field.editIdx = -1')
             .col-sm-5
                 input.form-control(type='text' ng-model='newValue' placeholder='{{field.placeholder}}')
-            button.btn.btn-primary(style='margin-left: 10px;' ng-disabled='!newValue || #{tblMdl}.indexOf(newValue) >= 0' ng-click='field.editIdx = -1; addSimpleItem(field.model, newValue)') Add {{field.label}}
+            button.btn.btn-primary(style='margin-left: 10px;' ng-disabled='!newValue || #{tblMdl}.indexOf(newValue) >= 0' ng-click='field.editIdx = -1; addSimpleItem(backupItem, field.model, newValue)') Add {{field.label}}
 
