# ignite-850 Added alert message.

--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -551,9 +551,14 @@ a:hover, .link:hover .title {
 
 .modal .close {
   position: absolute;
-  top: 24px;
-  right: 24px;
+  top: 0.65em;
+  right: 0.65em;
   float: none;
+}
+
+// Close icon
+.modal-header .close {
+  margin-right: -2px;
 }
 
 .modal .modal-dialog {
