--- a/modules/webconfig/nodejs/views/includes/controls.jade
+++ b/modules/webconfig/nodejs/views/includes/controls.jade
@@ -51,7 +51,7 @@ mixin details-row
                 button.form-control(bs-select ng-model=detailMdl data-multiple='1' data-placeholder='{{detail.placeholder}}' bs-options='item.value as item.label for item in {{detail.items}}')
             +tipField('detail.tip')
         div(ng-switch-when='table-simple')
-            .links-edit.details-row(style='margin-bottom: 0px;')
+            .links-edit.details-row.details-table-row
                 table.col-sm-12(st-table=detailMdl)
                     tbody
                         tr(ng-repeat='item in #{detailMdl}')
@@ -70,7 +70,7 @@ mixin details-row
             .details-label
                 .col-sm-8
                     input.form-control(type='text' ng-model='newValue' placeholder='{{detail.placeholder}}')
-                button.btn.btn-primary(style='margin-left: 10px;' ng-disabled='!newValue || #{detailMdl}.indexOf(newValue) >= 0' ng-click='detail.editIdx = -1; addDetailSimpleItem(backupItem, field, detail.model, newValue)') Add {{detail.label}}
+                button.btn.btn-primary.btn-second(ng-disabled='!newValue || #{detailMdl}.indexOf(newValue) >= 0' ng-click='detail.editIdx = -1; addDetailSimpleItem(backupItem, field, detail.model, newValue)') Add {{detail.label}}
 
 mixin form-row
     - var lblClasses = ['col-sm-2']
@@ -152,5 +152,5 @@ mixin form-row
                                 i.fa.fa-arrow-down(ng-show='$index < #{tblMdl}.length - 1' ng-click='field.editIdx = -1')
             .col-sm-5
                 input.form-control(type='text' ng-model='newValue' placeholder='{{field.placeholder}}')
-            button.btn.btn-primary(style='margin-left: 10px;' ng-disabled='!newValue || #{tblMdl}.indexOf(newValue) >= 0' ng-click='field.editIdx = -1; addSimpleItem(backupItem, field.model, newValue)') Add {{field.label}}
+            button.btn.btn-primary.btn-second(ng-disabled='!newValue || #{tblMdl}.indexOf(newValue) >= 0' ng-click='field.editIdx = -1; addSimpleItem(backupItem, field.model, newValue)') Add {{field.label}}
 
