# IGNITE-843 Fix [Configure now] button on starting page.

--- a/modules/webconfig/nodejs/views/index.jade
+++ b/modules/webconfig/nodejs/views/index.jade
@@ -40,4 +40,4 @@ block container
             .block-image.block-display-image
                     img(ng-src='https://www.filepicker.io/api/file/lydEeGB6Rs9hwbpcQxiw' alt='Apache Ignite stack')
             .text-center(ng-controller='auth')
-                a.btn.btn-default(ng-click='login()' href='#') Configure Now
+                button.btn.btn-primary(ng-click='login()' href='#') Configure Now
