--- a/modules/webconfig/nodejs/views/includes/controls.jade
+++ b/modules/webconfig/nodejs/views/includes/controls.jade
@@ -65,8 +65,8 @@ mixin details-row
                                     .input-tip
                                         input.form-control(type='text' ng-model='curValue' placeholder='{{detail.placeholder}}')
                             td.col-sm-1(ng-if='detail.reordering')
-                                i.fa.fa-arrow-up(ng-show='$index > 0' ng-click='detail.editIdx = -1')
-                                i.fa.fa-arrow-down(ng-show='$index < #{detailMdl}.length - 1' ng-click='detail.editIdx = -1')
+                                i.fa.fa-arrow-up(ng-show='$index > 0' ng-click='swapSimpleItems(#{detailMdl}, $index, $index - 1); detail.editIdx = -1;')
+                                i.fa.fa-arrow-down(ng-show='$index < #{detailMdl}.length - 1' ng-click='swapSimpleItems(#{detailMdl}, $index, $index + 1); detail.editIdx = -1;')
             .details-label
                 .col-sm-8
                     input.form-control(type='text' ng-model='newValue' placeholder='{{detail.placeholder}}')
@@ -148,8 +148,8 @@ mixin form-row
                                     .input-tip
                                         input.form-control(type='text' ng-model='curValue' placeholder='{{field.placeholder}}')
                             td.col-sm-1(ng-if='field.reordering')
-                                i.fa.fa-arrow-up(ng-show='$index > 0' ng-click='field.editIdx = -1')
-                                i.fa.fa-arrow-down(ng-show='$index < #{tblMdl}.length - 1' ng-click='field.editIdx = -1')
+                                i.fa.fa-arrow-up(ng-show='$index > 0' ng-click='swapSimpleItems(#{tblMdl}, $index, $index - 1); field.editIdx = -1;')
+                                i.fa.fa-arrow-down(ng-show='$index < #{tblMdl}.length - 1' ng-click='swapSimpleItems(#{tblMdl}, $index, $index + 1); field.editIdx = -1;')
             .col-sm-5
                 input.form-control(type='text' ng-model='newValue' placeholder='{{field.placeholder}}')
             button.btn.btn-primary.btn-second(ng-disabled='!newValue || #{tblMdl}.indexOf(newValue) >= 0' ng-click='field.editIdx = -1; addSimpleItem(backupItem, field.model, newValue)') Add {{field.label}}
