--- a/modules/webconfig/nodejs/views/includes/controls.jade
+++ b/modules/webconfig/nodejs/views/includes/controls.jade
@@ -50,27 +50,25 @@ mixin details-row
             .col-sm-8
                 button.form-control(bs-select ng-model=detailMdl data-multiple='1' data-placeholder='{{detail.placeholder}}' bs-options='item.value as item.label for item in {{detail.items}}')
             +tipField('detail.tip')
-        div(ng-switch-when='table-simple')
-            .links-edit.details-row.details-table-row
-                table.col-sm-12(st-table=detailMdl)
-                    tbody
-                        tr(ng-repeat='item in #{detailMdl}')
-                            td.col-sm-11
-                                div(ng-show='detail.editIdx != {{$index}}')
-                                    a(ng-click='detail.editIdx = $index; curValue = #{detailMdl}[$index]') {{$index + 1}}. {{item}}
-                                    i.tipField.fa.fa-remove(ng-click='detail.editIdx = -1; #{detailMdl}.splice($index, 1)')
-                                div(ng-show='detail.editIdx == {{$index}}')
-                                    label.labelField {{$index + 1}}.
-                                    i.tipField.fa.fa-floppy-o(ng-click='detail.editIdx = -1; #{detailMdl}[$index]=curValue')
-                                    .input-tip
-                                        input.form-control(type='text' ng-model='curValue' placeholder='{{detail.placeholder}}')
-                            td.col-sm-1(ng-if='detail.reordering')
-                                i.fa.fa-arrow-up(ng-show='$index > 0' ng-click='swapSimpleItems(#{detailMdl}, $index, $index - 1); detail.editIdx = -1;')
-                                i.fa.fa-arrow-down(ng-show='$index < #{detailMdl}.length - 1' ng-click='swapSimpleItems(#{detailMdl}, $index, $index + 1); detail.editIdx = -1;')
-            .details-label
-                .col-sm-8
-                    input.form-control(type='text' ng-model='newValue' placeholder='{{detail.placeholder}}')
-                button.btn.btn-primary.btn-second(ng-disabled='!newValue || #{detailMdl}.indexOf(newValue) >= 0' ng-click='detail.editIdx = -1; addDetailSimpleItem(backupItem, field, detail.model, newValue)') Add {{detail.label}}
+        div(ng-switch-when='table-simple' style='margin-right: 5px; margin-top: -0.65em')
+            table.col-sm-12.links-edit(st-table=detailMdl)
+                tbody
+                    tr(ng-repeat='item in #{detailMdl}')
+                        td.col-sm-11
+                            div(ng-show='detail.editIdx != {{$index}}')
+                                a(ng-click='detail.editIdx = $index; curValue = #{detailMdl}[$index]') {{$index + 1}}. {{item}}
+                                i.tipField.fa.fa-remove(ng-click='detail.editIdx = -1; #{detailMdl}.splice($index, 1)')
+                            div(ng-show='detail.editIdx == {{$index}}')
+                                label.labelField {{$index + 1}}.
+                                i.tipField.fa.fa-floppy-o(ng-click='detail.editIdx = -1; #{detailMdl}[$index]=curValue')
+                                .input-tip
+                                    input.form-control(type='text' ng-model='curValue' placeholder='{{detail.placeholder}}')
+                        td.col-sm-1(ng-if='detail.reordering')
+                            i.fa.fa-arrow-up(ng-show='$index > 0' ng-click='swapSimpleItems(#{detailMdl}, $index, $index - 1); detail.editIdx = -1;')
+                            i.fa.fa-arrow-down(ng-show='$index < #{detailMdl}.length - 1' ng-click='swapSimpleItems(#{detailMdl}, $index, $index + 1); detail.editIdx = -1;')
+            button.btn.btn-primary.fieldButton(ng-disabled='!newValue || #{detailMdl}.indexOf(newValue) >= 0' ng-click='detail.editIdx = -1; addDetailSimpleItem(backupItem, field, detail.model, newValue)') Add
+            .input-tip
+                input.form-control(type='text' ng-model='newValue' placeholder='{{detail.placeholder}}')
 
 mixin form-row
     - var lblClasses = ['col-sm-2']
@@ -134,23 +132,23 @@ mixin form-row
             div
                 label {{field.tableLabel}}: {{#{tblMdl}.length}}
                 +tipLabel('field.tip')
-            .links-edit(ng-show='#{tblMdl}.length > 0')
-                table.col-sm-12(st-table=tblMdl)
-                    tbody
-                        tr.col-sm-12(ng-repeat='item in #{tblMdl}')
-                            td.col-sm-6
-                                div(ng-show='field.editIdx != {{$index}}')
-                                    a(ng-click='field.editIdx = $index; curValue = #{tblMdl}[$index]') {{$index + 1}}. {{item}}
-                                    i.tipField.fa.fa-remove(ng-click='field.editIdx = -1; #{tblMdl}.splice($index, 1)')
-                                div(ng-show='field.editIdx == {{$index}}')
-                                    label.labelField {{$index + 1}}.
-                                    i.tipField.fa.fa-floppy-o(ng-click='field.editIdx = -1; #{tblMdl}[$index]=curValue')
-                                    .input-tip
-                                        input.form-control(type='text' ng-model='curValue' placeholder='{{field.placeholder}}')
-                            td.col-sm-1(ng-if='field.reordering')
-                                i.fa.fa-arrow-up(ng-show='$index > 0' ng-click='swapSimpleItems(#{tblMdl}, $index, $index - 1); field.editIdx = -1;')
-                                i.fa.fa-arrow-down(ng-show='$index < #{tblMdl}.length - 1' ng-click='swapSimpleItems(#{tblMdl}, $index, $index + 1); field.editIdx = -1;')
-            .col-sm-5
-                input.form-control(type='text' ng-model='newValue' placeholder='{{field.placeholder}}')
-            button.btn.btn-primary.btn-second(ng-disabled='!newValue || #{tblMdl}.indexOf(newValue) >= 0' ng-click='field.editIdx = -1; addSimpleItem(backupItem, field.model, newValue)') Add {{field.label}}
+            table.links-edit.col-sm-12(st-table=tblMdl ng-show='#{tblMdl}.length > 0')
+                tbody
+                    tr.col-sm-12(ng-repeat='item in #{tblMdl}')
+                        td.col-sm-6
+                            div(ng-show='field.editIdx != {{$index}}')
+                                a(ng-click='field.editIdx = $index; curValue = #{tblMdl}[$index]') {{$index + 1}}. {{item}}
+                                i.tipField.fa.fa-remove(ng-click='field.editIdx = -1; #{tblMdl}.splice($index, 1)')
+                            div(ng-show='field.editIdx == {{$index}}')
+                                label.labelField {{$index + 1}}.
+                                i.tipField.fa.fa-floppy-o(ng-click='field.editIdx = -1; #{tblMdl}[$index]=curValue')
+                                .input-tip
+                                    input.form-control(type='text' ng-model='curValue' placeholder='{{field.placeholder}}')
+                        td.col-sm-1(ng-if='field.reordering')
+                            i.fa.fa-arrow-up(ng-show='$index > 0' ng-click='swapSimpleItems(#{tblMdl}, $index, $index - 1); field.editIdx = -1;')
+                            i.fa.fa-arrow-down(ng-show='$index < #{tblMdl}.length - 1' ng-click='swapSimpleItems(#{tblMdl}, $index, $index + 1); field.editIdx = -1;')
+            .col-sm-6
+                button.btn.btn-primary.fieldButton(ng-disabled='!newValue || #{tblMdl}.indexOf(newValue) >= 0' ng-click='field.editIdx = -1; addSimpleItem(backupItem, field.model, newValue)') Add
+                .input-tip
+                    input.form-control(type='text' ng-model='newValue' placeholder='{{field.placeholder}}')
 
