# IGNITE-843 Added sub for summary page + minor cleanup.

--- a/modules/webconfig/nodejs/views/layout-sidebar.jade
+++ b/modules/webconfig/nodejs/views/layout-sidebar.jade
@@ -35,7 +35,7 @@ block container
                         a(ng-class="{active: isActive('/clients')}" href='/clients') Clients
                     li
                         p
-                        a(ng-class="{active: isActive('/overview')}" href='/overview') Summary
+                        a(ng-class="{active: isActive('/summary')}" href='/summary') Summary
         .col-sm-10.border-left.section-right
             .docs-content
                 block content
