--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -57,17 +57,14 @@
   min-width: 320px;
   max-width: 630px;
   width: 50%;
-  -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
 
 .border-left {
-  -webkit-box-shadow: 1px 0 0 0 #eee inset;
   box-shadow: 1px 0 0 0 #eee inset;
 }
 
 .border-right {
-  -webkit-box-shadow: 1px 0 0 0 #eee;
   box-shadow: 1px 0 0 0 #eee;
 }
 
@@ -175,11 +172,9 @@
 }
 
 .theme-line .main-content .nav-horizontal a {
-  -webkit-box-shadow: 0 0;
   box-shadow: 0 0;
   border: 0 none;
   background-color: #fff;
-  -webkit-border-radius: 0;
   border-radius: 0;
   color: #aaa;
   padding: 6px;
@@ -297,8 +292,6 @@
   display: block;
   width: 100%;
   height: 100%;
-  -webkit-background-size: contain;
-  -moz-background-size: contain;
   background-size: contain;
 }
 
@@ -319,7 +312,6 @@
   padding: 3px 5px;
   display: inline-block;
   line-height: 8px;
-  -webkit-border-radius: 3px;
   border-radius: 3px;
   margin-left: 6px;
   color: #fff;
@@ -456,7 +448,6 @@
 .body-box .main-content,
 .body-overlap .main-content {
   padding: 30px;
-  -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
   background-color: #fff;
 }
@@ -547,7 +538,6 @@ a:hover, .link:hover .title {
 }
 
 .modal .modal-content {
-  -webkit-border-radius: 0;
   border-radius: 0;
   background-color: #f7f7f7;
 }
@@ -663,7 +653,7 @@ button {
 h1,
 h2,
 h3 {
-  -webkit-user-select: none;
+  user-select: none;
   font-weight: normal;
   /* Makes the vertical size of the text the same for all fonts. */
   line-height: 1;
