--- a/modules/webconfig/nodejs/views/caches.jade
+++ b/modules/webconfig/nodejs/views/caches.jade
@@ -33,9 +33,7 @@ block content
                     tr(ng-repeat='row in caches track by row._id')
                         td.col-sm-6(ng-class='{active: row._id == selectedItem._id}')
                             a(ng-click='selectItem(row)') {{$index + 1}}. {{row.name}}, {{row.mode | displayValue:modes:'Cache mode not set'}}, {{row.atomicityMode | displayValue:atomicities:'Cache atomicity not set'}}
-        button(ng-click='createItem()' class=['btn', 'btn-primary'] ng-disabled='!create.template') &nbspAdd cache
-        span(style='margin-left: 15px; margin-right: 5px') Use template:&nbsp
-        button.btn.btn-default(ng-init='create.template = templates[0].value' ng-model='create.template' data-template='/select' data-placeholder='Choose cache template' bs-options='item.value as item.label for item in templates' bs-select)
+        button.btn.btn-primary(ng-click='createItem()') Add cache
         hr
         form.form-horizontal(name='cachesForm' ng-if='backupItem')
             div(bs-collapse data-start-collapsed='false')
