# IGNITE-843 Wip on Indexed types.

--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -681,12 +681,16 @@ table tr:hover{ cursor:pointer; }
 .form-control {
   display: inline-block;
   text-align: left;
-  padding: 3px 6px;
+  padding: 3px 3px;
   height: @input-height;
 
   button {
     text-align: left;
   }
+}
+
+.table-form-control {
+  width: auto;
 }
 
 .form-horizontal .control-label {
