# IGNITE-843 Create control to show generated configuration.

--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -927,3 +927,9 @@ label.required:after {
 .alert.bottom-left .close {
   padding-right: 10px
 }
+
+//  Summary page
+#cfgResult textarea {
+  font-family: monospace;
+  font-size: 12px;
+}
